Eliminacion de print innecesario

--- a/templates/buscadorEmb.html
+++ b/templates/buscadorEmb.html
@@ -21,6 +21,9 @@
         Encuentra artículos por significado, no por coincidencia de palabras,
         usando modelos de lenguaje modernos.
       </p>
+      <p class="enhanced-subtitle">
+        modelo utilizado: all-MiniLM-L6-v2
+      </p>
 
       <form
         action="/buscar_embedding"
