Eliminación de código innecesario

--- a/templates/buscadorEmb.html
+++ b/templates/buscadorEmb.html
@@ -46,4 +46,7 @@
       </form>
     </div>
   </body>
+  <footer class="google-footer">
+      © 2025 UPScholar — Proyecto de Machine Learning
+  </footer>
 </html>
