--- a/templates/buscador.html
+++ b/templates/buscador.html
@@ -37,4 +37,7 @@
       </form>
     </div>
   </body>
+  <footer class="google-footer">
+      © 2025 UPScholar — Proyecto de Machine Learning
+  </footer>
 </html>
